fixes #15542. Input node of ValuePickerSlot not centered on iOS. Thanks Soyhy Lim (IBM, CCLA).
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@28959 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/ValuePicker.less
+++ b/mobile/themes/common/ValuePicker.less
@@ -41,6 +41,7 @@
 	width: 90%;
 	height: 90%;
 	margin: 5% auto;
+	padding: 0;
 	text-align: center;
 	border-style: none;
 	background-color: transparent;
